# calibration

./: .gitignore  README.md  extrinsic_from_aruco_depth.py  main.py  pyproject.toml
configurations/: camera_params_best.json  extrinsics_world_cam0.json
src/calibration/: app.py
src/calibration/ui/: aruco_rig_calibration.py  calibration_console_window.py  calibration_controller.py  pose_view.py
src/calibration/ui/sidebar/: camera_rig_panel.py  camera_telemetry_panel.py
src/capture_tools/: __init__.py  capture_all.py  orbbec.py  realsense.py
